Phase 2: Deep content for 80+ technology subdirectories (Languages, DBs, Cloud, LLMs, AI/ML, DevOps, Observability, Agents, Security, Architecture)